--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.8",
     "@fortawesome/free-solid-svg-icons": "^5.5.0",
     "@fortawesome/react-fontawesome": "^0.1.3",
+    "@tweenjs/tween.js": "^17.2.0",
     "react": "^16.6.3",
     "react-app-rewire-workbox": "^2.0.1",
     "react-app-rewired": "^1.6.2",
