--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-app-rewired": "^1.6.2",
     "react-dom": "^16.6.3",
     "react-scripts": "2.1.1",
+    "react-transition-group": "^2.5.3",
     "three": "^0.98.0",
     "workbox-webpack-plugin": "^3.6.3"
   },
