--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-app-rewire-workbox": "^2.0.1",
     "react-app-rewired": "^1.6.2",
     "react-dom": "^16.6.3",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
     "react-transition-group": "^2.5.3",
     "three": "^0.98.0",
