--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "@fortawesome/free-solid-svg-icons": "^5.5.0",
     "@fortawesome/react-fontawesome": "^0.1.3",
     "@tweenjs/tween.js": "^17.2.0",
+    "moment": "^2.24.0",
+    "node-sass": "^4.11.0",
     "react": "^16.6.3",
     "react-app-rewire-workbox": "^2.0.1",
     "react-app-rewired": "^1.6.2",
     "react-dom": "^16.6.3",
+    "react-moment": "^0.8.4",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
     "react-transition-group": "^2.5.3",
