--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-app-rewire-workbox": "^2.0.1",
     "react-app-rewired": "^1.6.2",
     "react-dom": "^16.6.3",
+    "react-lines-ellipsis": "^0.14.0",
     "react-moment": "^0.8.4",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
