--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "my-wpa",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://nathanfrad.github.io/PWA-React-ThreeJs",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.8",
     "@fortawesome/free-solid-svg-icons": "^5.5.0",
     "@fortawesome/react-fontawesome": "^0.1.3",
     "@tweenjs/tween.js": "^17.2.0",
+    "gh-pages": "^2.0.1",
     "moment": "^2.24.0",
     "node-sass": "^4.11.0",
     "react": "^16.6.3",
@@ -25,6 +27,8 @@
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test --env=jsdom",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-app-rewired eject"
   },
   "eslintConfig": {
